--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Blog</title>
+  <title>EMP</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+
+    <style type="text/css">
+      html {height: 100%;}
+      body {font-size: 16px; height: 100%; background: #009688; color: #ffffff; display: flex; align-items: center; justify-content: center;}
+      h1 {font-size: 2.0em; text-align: center;}
+      p {font-size: 16px; text-align: center;}
+      div {text-align: center;}
+    </style>
+    <div>
+      <h1>EMP</h1>
+      <p>無知は表現によって知となり、知は表現よって無知となる</p>
+    </div>
+
+  </app-root>
 </body>
 </html>
