--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>EMP</title>
-  <base href=".">
+  <base href="/">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="portofolio">
